# expenses-tracker-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database.db  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8c03ce3e58a6_change_password_hash_string_length.py  ba8ca2de27a9_create_categories.py  c11a09ed5954_generate_db.py
scripts/: entrypoint.sh
src/: main.py
src/api/: deps.py
src/api/V1/: auth.py  expenses.py  router.py
src/core/: config.py  db.py  exceptions.py  exceptions_handler.py  security.py
src/db/: db.py  expenses.py  users.py
src/models/: auth.py  expenses.py  users.py
src/services/: auth.py  expenses.py
tests/: conftest.py  test_api_auth.py  test_api_expenses.py  test_database_expenses.py  test_db.py
