[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
